Link to sections in navbar

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,19 @@ defaults:
     type: pages
   values:
     layout: page
+links:
+-
+  text: Peruskurssi
+  hash: peruskurssi
+-
+  text: Harjoitusajat
+  hash: harjoitusajat
+-
+  text: Seura
+  hash: seura
+-
+  text: Dojo
+  hash: dojo
 permalink: none
 exclude:
 - Gemfile
