Add body field to pages CMS config

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,6 +16,10 @@ collections:
         name: subtitle
         widget: string
 
+      - label: Body,
+        name: body
+        widget: markdown
+
       - label: Position
         name: position
         widget: number
