--- a/_data/timetable.yml
+++ b/_data/timetable.yml
@@ -1,11 +1,11 @@
-heading: Harjoitusajat syksy 2017
+heading: Harjoitusajat kevät 2018
 timetable:
 - day: Maanantai
   times:
   - 20:00-21:30 Iaido, Lintuvaaran koulu
 - day: Tiistai
   times:
-  - 20.00-21:30 Kendo, Ruusutorpan koulu
+  - 20:00-21:30 Kendo, Ruusutorpan koulu
 - day: Keskiviikko
   times:
   - 20:00-21:30 Jodo, Lintuvaaran koulu
