--- a/_data/timetable.yml
+++ b/_data/timetable.yml
@@ -1,4 +1,4 @@
-heading: Harjoitusajat kesävuorot 23.7 - 16.8.
+heading: Harjoitusajat kevät 2019
 timetable:
 - day: Maanantai
   times:
@@ -8,14 +8,15 @@ timetable:
   - 20:00-21:30 Kendo, Ruusutorpan koulu
 - day: Keskiviikko
   times:
-  - 19:30-21:30 Jodo, Lintuvaaran koulu
+  - 20:00-21:30 Jodo, Lintuvaaran koulu
 - day: Torstai
   times:
-  - 19:30-21:30 Iaido, Lintuvaaran koulu
-  - 19:30-21:30 Kendo, Ruusutorpan Koulu
+  - 19:00-21:00 Iaido, Lintuvaaran koulu
+  - 20:00-21:30 Kendo, Ruusutorpan koulu
 - day: Perjantai
   times: []
 - day: Lauantai
-  times: []
+  times:
+  - 14:00-17:00 Iaido / Jodo, Ruusutorpan koulu
 - day: Sunnuntai
   times: []
